--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
         "tailwindcss": "^1.3.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "accounting": "^0.4.1",
+        "chunk": "0.0.3",
+        "pluralize": "^8.0.0",
+        "vue-select": "^3.10.8",
+        "vue-tailwind": "^1.2.8",
+        "vuex": "^3.5.1"
     }
 }
